--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -12,7 +12,8 @@
     </head>
     <body>
         <div class="app">
-            
+            <button id="p_close">x</button>
+
             <h1 id="msg">---</h1>
             
             <button id="p_llamar" class="oculto"></button>
